# nexlify

./: .gitignore  README.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: master-deploy.yml  nexlify-ai-agentics-server-deploy.yml  nexlify-ai-agentics-server-docker-publish.yml  nexlify-data-ingestion-server-deploy.yml  nexlify-data-ingestion-server-docker-publish.yml  nexlify-infra-deploy.yml  nexlify-infra-destroy.yml  nexlify-mcp-server-publish.yml
blueprint/: README.md  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars copy.example
blueprint/aws/: README.md  main.tf  variables.tf
blueprint/azure/: README.md  main.tf  nat_gateway.tf  network.tf  nsg.tf  outputs.tf  terraform.tfvars copy.example  variables.tf  vm_private.tf  vm_public.tf
data-ingestion-server/: .env.example  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
data-ingestion-server/src/: main.py
data-ingestion/src/: main.py  requirements.txt
docs/: Nexlify GitHub Repository Setup and Implementation.md  README.md
netlify-mcp-server/: hello.py  pyproject.toml
nexlify-ai-agentics-server/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml  report.md
nexlify-ai-agentics-server/src/nexlify_ai_agentics_server/: app.py  crew.py  main.py
nexlify-ai-agentics-server/src/nexlify_ai_agentics_server/config/: agents.yaml  tasks.yaml
nexlify-ai-agentics-server/src/nexlify_ai_agentics_server/tools/: nexlify_search_tool.py
nexlify-mcp-server/: Makefile  README.md
(+13 files in other folders)
